@@ -16,8 +16,6 @@ module Bundlegem
     end
 
     def run
-      # Bundler.ui.confirm "Creating gem '#{name}'..."
-      
       raise_project_with_that_name_already_exists! if File.exists?(target)
 
       underscored_name = name.tr('-', '_')
@@ -59,52 +57,17 @@ module Bundlegem
         'bin/console.tt' => "bin/console"
       }
 
+      prompt_coc!(templates)
+      prompt_mit!(templates, config)
+      prompt_test_framework!(templates, config)
 
-      if ask_and_set(:coc, "Do you want to include a code of conduct in gems you generate?",
-          "Codes of conduct can increase contributions to your project by contributors who " \
-          "prefer collaborative, safe spaces. You can read more about the code of conduct at " \
-          "contributor-covenant.org. Having a code of conduct means agreeing to the responsibility " \
-          "of enforcing it, so be sure that you are prepared to do that. For suggestions about " \
-          "how to enforce codes of conduct, see bit.ly/coc-enforcement."
-        )
-        templates.merge!("CODE_OF_CONDUCT.md.tt" => "CODE_OF_CONDUCT.md")
-      end
-      
+      templates.merge!("exe/newgem.tt" => "exe/#{config[:name]}") if config[:bin]
 
-      if ask_and_set(:mit, "Do you want to license your code permissively under the MIT license?",
-          "This means that any other developer or company will be legally allowed to use your code " \
-          "for free as long as they admit you created it. You can read more about the MIT license " \
-          "at choosealicense.com/licenses/mit."
-        )
-        config[:mit] = true
-        templates.merge!("LICENSE.txt.tt" => "LICENSE.txt")
-      end
-
-      if test_framework = ask_and_set_test_framework
-        templates.merge!(".travis.yml.tt" => ".travis.yml")
-
-        case test_framework
-        when 'rspec'
-          templates.merge!(
-            "rspec.tt" => ".rspec",
-            "spec/spec_helper.rb.tt" => "spec/spec_helper.rb",
-            'spec/#{name}_spec.rb.tt' => "spec/#{namespaced_path}_spec.rb"
-          )
-        when 'minitest'
-          templates.merge!(
-            "test/minitest_helper.rb.tt" => "test/minitest_helper.rb",
-            "test/test_newgem.rb.tt" => "test/test_#{namespaced_path}.rb"
-          )
-        end
-      end
-
-      templates.merge!("exe/newgem.tt" => "exe/#{name}") if options[:bin]
-
-      if options[:ext]
+      if config[:ext]
         templates.merge!(
-          "ext/newgem/extconf.rb.tt" => "ext/#{name}/extconf.rb",
-          "ext/newgem/newgem.h.tt" => "ext/#{name}/#{underscored_name}.h",
-          "ext/newgem/newgem.c.tt" => "ext/#{name}/#{underscored_name}.c"
+          "ext/newgem/extconf.rb.tt" => "ext/#{config[:name]}/extconf.rb",
+          "ext/newgem/newgem.h.tt" => "ext/#{config[:name]}/#{config[:underscored_name]}.h",
+          "ext/newgem/newgem.c.tt" => "ext/#{config[:name]}/#{config[:underscored_name]}.c"
         )
       end
       
@@ -150,20 +113,24 @@ module Bundlegem
       template_dirs
     end
 
-    def dynamically_generate_templates 
-      return nil if options["template"].nil?
-
-      template_src = get_template_src
-      
-      templates = {}
-      Dir.glob("#{template_src}/**/*.tt").each do |f|
-        base_path = f[template_src.length+1..-1]
-        templates.merge!(base_path => base_path.gsub(/\.tt$/, "").gsub('#{name}', "#{name}") )
+    # Figures out the translation between all the .tt file to their 
+    # destination names
+    def dynamically_generate_templates
+      if options["template"].nil? # if it's doing some of the built in template
+        return nil 
+      else
+        template_src = get_template_src
+        
+        templates = {}
+        Dir.glob("#{template_src}/**/*.tt").each do |f|
+          base_path = f[template_src.length+1..-1]
+          templates.merge!(base_path => base_path.gsub(/\.tt$/, "").gsub('#{name}', "#{name}") )
+        end
+        
+        raise_no_files_in_template_error! if templates.empty?
+  
+        return templates
       end
-      
-      raise_no_files_in_template_error! if templates.empty?
-
-      templates
     end
     
     def create_template_directories(template_directories, target)
@@ -208,17 +175,7 @@ module Bundlegem
       Pathname.pwd.join(name).basename.to_s
     end
 
-    def ask_and_set(key, header, message)
-      choice = options[key]  # || Bundler.settings["gem.#{key}"]
-
-      if choice.nil?
-        Bundler.ui.confirm header
-        choice = (Bundler.ui.ask("#{message} y/(n):") =~ /y|yes/)
-        Bundler.settings.set_global("gem.#{key}", choice)
-      end
-
-      choice
-    end
+    
 
     def validate_ext_name
       return unless gem_name.index('-')
@@ -230,26 +187,7 @@ module Bundlegem
       exit 1
     end
 
-    def ask_and_set_test_framework
-      test_framework = options[:test] || Bundler.settings["gem.test"]
-
-      if test_framework.nil?
-        Bundler.ui.confirm "Do you want to generate tests with your gem?"
-        result = Bundler.ui.ask "Type 'rspec' or 'minitest' to generate those test files now and " \
-          "in the future. rspec/minitest/(none):"
-        if result =~ /rspec|minitest/
-          test_framework = result
-        else
-          test_framework = false
-        end
-      end
-
-      if Bundler.settings["gem.test"].nil?
-        Bundler.settings.set_global("gem.test", test_framework)
-      end
-
-      test_framework
-    end
+    
 
     def bundler_dependency_version
       v = Gem::Version.new(Bundler::VERSION)
@@ -258,17 +196,7 @@ module Bundlegem
       req.join(".")
     end
 
-    # This checks to see that the gem_name is a valid ruby gem name and will 'work'
-    # and won't overlap with a bundlegem constant apparently...
-    def ensure_safe_gem_name(name, constant_array)
-      if name =~ /^\d/
-        Bundler.ui.error "Invalid gem name #{name} Please give a name which does not start with numbers."
-        exit 1
-      elsif Object.const_defined?(constant_array.first)
-        Bundler.ui.error "Invalid gem name #{name} constant #{constant_array.join("::")} is already in use. Please choose another gem name."
-        exit 1
-      end
-    end
+    
     
     
     
@@ -354,6 +282,103 @@ module Bundlegem
       Bundler.ui.error err_missing_template
       exit 1
     end
+    
+    
+    ############# STUFF THAT SHOULD BE REMOVED DOWN THE ROAD
+    
+    # This asks the user if they want to setup rspec or test...
+    # It's not class based, it's additive based... Plus bundlegem does this already
+    def ask_and_set_test_framework
+      test_framework = options[:test] || Bundler.settings["gem.test"]
+
+      if test_framework.nil?
+        Bundler.ui.confirm "Do you want to generate tests with your gem?"
+        result = Bundler.ui.ask "Type 'rspec' or 'minitest' to generate those test files now and " \
+          "in the future. rspec/minitest/(none):"
+        if result =~ /rspec|minitest/
+          test_framework = result
+        else
+          test_framework = false
+        end
+      end
+
+      if Bundler.settings["gem.test"].nil?
+        Bundler.settings.set_global("gem.test", test_framework)
+      end
+
+      test_framework
+    end
+    
+    def ask_and_set(key, header, message)
+      choice = options[key]  # || Bundler.settings["gem.#{key}"]
+
+      if choice.nil?
+        Bundler.ui.confirm header
+        choice = (Bundler.ui.ask("#{message} y/(n):") =~ /y|yes/)
+        Bundler.settings.set_global("gem.#{key}", choice)
+      end
+
+      choice
+    end
+    
+    def prompt_coc!(templates)
+      if ask_and_set(:coc, "Do you want to include a code of conduct in gems you generate?",
+          "Codes of conduct can increase contributions to your project by contributors who " \
+          "prefer collaborative, safe spaces. You can read more about the code of conduct at " \
+          "contributor-covenant.org. Having a code of conduct means agreeing to the responsibility " \
+          "of enforcing it, so be sure that you are prepared to do that. For suggestions about " \
+          "how to enforce codes of conduct, see bit.ly/coc-enforcement."
+        )
+        templates.merge!("CODE_OF_CONDUCT.md.tt" => "CODE_OF_CONDUCT.md")
+      end
+    end
+    
+    def prompt_mit!(templates, config)
+      if ask_and_set(:mit, "Do you want to license your code permissively under the MIT license?",
+          "This means that any other developer or company will be legally allowed to use your code " \
+          "for free as long as they admit you created it. You can read more about the MIT license " \
+          "at choosealicense.com/licenses/mit."
+        )
+        config[:mit] = true
+        templates.merge!("LICENSE.txt.tt" => "LICENSE.txt")
+      end
+    end
+    
+    def prompt_test_framework!(templates, config)
+      namespaced_path = config[:namespaced_path]
+      if test_framework = ask_and_set_test_framework
+        templates.merge!(".travis.yml.tt" => ".travis.yml")
+
+        case test_framework
+        when 'rspec'
+          templates.merge!(
+            "rspec.tt" => ".rspec",
+            "spec/spec_helper.rb.tt" => "spec/spec_helper.rb",
+            'spec/#{name}_spec.rb.tt' => "spec/#{namespaced_path}_spec.rb"
+          )
+        when 'minitest'
+          templates.merge!(
+            "test/minitest_helper.rb.tt" => "test/minitest_helper.rb",
+            "test/test_newgem.rb.tt" => "test/test_#{namespaced_path}.rb"
+          )
+        end
+      end
+    end
+    
+    # This checks to see that the gem_name is a valid ruby gem name and will 'work'
+    # and won't overlap with a bundlegem constant apparently...
+    #
+    # TODO:  This should be defined within the template itself in some way
+    def ensure_safe_gem_name(name, constant_array)
+      if name =~ /^\d/
+        Bundler.ui.error "Invalid gem name #{name} Please give a name which does not start with numbers."
+        exit 1
+      elsif Object.const_defined?(constant_array.first)
+        Bundler.ui.error "Invalid gem name #{name} constant #{constant_array.join("::")} is already in use. Please choose another gem name."
+        exit 1
+      end
+    end
+    
 
   end
 end
