@@ -6,7 +6,7 @@ require "<%=config[:namespaced_path]%>/version"
 <%= '  '*i %>module <%= c %>
 <%- end -%>
 
-<%= '  '*config[:constant_array].size %># Your code goes here...k
+<%= '  '*config[:constant_array].size %># Your code goes here...
 
 <%= '  '*config[:constant_array].size %>def self.About
 <%= '  '*config[:constant_array].size %>end
